# PlayerDB

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  beet-dev.yaml  beet-project.yaml  beet.json  beet_release.yaml  index.html  objects.inv  pack.mcmeta  package-lock.json  playerdb.sublime-workspace  project.toml  pyproject.toml  searchindex.js  setup.py
.github/workflows/: docs.yml  main.yml
_sources/: index.md.txt  technical.md.txt  usage.md.txt
changelog/: index.html
data/load/functions/_private/: init.mcfunction
data/load/tags/functions/: load.json  post_load.json  rx.json  standard.json
data/minecraft/loot_tables/: yellow_shulker_box.json
data/minecraft/tags/functions/: load.json  tick.json
data/rx.playerdb/advancements/: first_login.json
data/rx.playerdb/functions/: init.mcfunction  load.mcfunction  player.mcfunction  post_load.mcfunction  pre_load.mcfunction  shulker_init.mcfunction  shulker_tick.mcfunction  tick.mcfunction  upgrade.mcfunction
data/rx.playerdb/functions/admin/: debug.mcfunction  delete_player.mcfunction  list.mcfunction  migrate_account.mcfunction  remove.mcfunction  remove_entry.mcfunction  replace_entry.mcfunction  reset.mcfunction  reset_all.mcfunction  reset_self.mcfunction
data/rx.playerdb/functions/api/: add_entry.mcfunction  get.mcfunction  get_self.mcfunction  list.mcfunction  save.mcfunction  save_self.mcfunction  select.mcfunction
data/rx.playerdb/functions/impl/: _list_iter.mcfunction  add_entry.mcfunction  fast_filter.mcfunction  get.mcfunction  get_name.mcfunction  list.mcfunction  list_iter.mcfunction  new_uid.mcfunction  save.mcfunction  select.mcfunction  split.mcfunction  uid_to_bits.mcfunction  uid_to_bits.py  verify.mcfunction
data/rx.playerdb/functions/test/: create_150_entries.mcfunction  create_5_entries.mcfunction  create_entry.mcfunction  create_n_entries.mcfunction  modify_save.mcfunction  random.mcfunction  reset_self.mcfunction  summon_200.mcfunction  summon_50.mcfunction
data/rx/advancements/: first_join.json
data/rx/functions/: pre_load.mcfunction
data/rx/functions/player/: _list_iter.mcfunction  fast_filter.mcfunction  fast_get.mcfunction  filter.mcfunction  first_join.mcfunction  generate.py  get.mcfunction  list.mcfunction  load.mcfunction  reset.mcfunction  save.mcfunction  uid_to_bits.mcfunction
data/rx/functions/playerdb/: _list_iter.mcfunction  fast_filter.mcfunction  fast_get.mcfunction  fast_get_self.mcfunction  filter.mcfunction  first_join.mcfunction  generate.py  get.mcfunction  get_self.mcfunction  list.mcfunction  load.mcfunction  reset.mcfunction  save.mcfunction  tick.mcfunction  uid_to_bits.mcfunction
data/rx/loot_tables/: player_head.json
data/rx/tags/functions/: upgrade.json
data_old/minecraft/loot_tables/blocks/: yellow_shulker_box.json
data_old/rx.playerdb/functions/: init.mcfunction  load.mcfunction  player.mcfunction  shulker_init.mcfunction  shulker_tick.mcfunction
data_old/rx.playerdb/functions/admin/: delete_player.mcfunction  migrate_account.mcfunction  reset_all.mcfunction
data_old/rx.playerdb/functions/api/: get.mcfunction  save_self.mcfunction
data_old/rx.playerdb/functions/impl/: add_entry.mcfunction  (+7 more)
data_old/rx/loot_tables/: player_head.json
docs/: index.md  setup.md  usage.md
docs/lag/nov3/: get_vs_select.txt
docs/lag/oct7/: debug_results.txt
genindex/: index.html
lag/: README.md  index.html
lag/nov3/: get_vs_select.txt
lag/oct7/: debug_results.txt
search/: index.html
setup/: index.html
src/: README.md  admin.md  api.md  api.py  bits.py  events.md  get.md  main.md  messages.md  save.md  select.md  test.md  upgrade.md  utils.md  uuid.md  verify.md
src/impl/: admin.md  get.md  save.md  select.md  uuid.md
src/misc/: lantern_load.md  other.md
src/plugins/: __init__.py  advancements.py  bits.py  debug_extension.py  misc.py
technical/: index.html
test/: main.md  player_names.txt
usage/: index.html
(+964 files in other folders)
