[tool.poetry]
name = "playerdb"
version = "2.0.0"
description = "A minecraft library which aids in storing data per player"
authors = ["rx97"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/rx-modules/playerdb"
repository = "https://github.com/rx-modules/playerdb"
documentation = "https://rx-modules.github.io/playerdb/"

keywords = [
  "beet",
  "minecraft",
  "rx",
  "rx-modules",
  "playerdb",
  "database"
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
mecha = ">=0.8.0"
# allay = ">=1.1.0"
beet = ">=0.44.2"
lectern = ">=0.17.0"
allay = {git = "https://github.com/rx-modules/Allay", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
isort = "^5.10.0"
python-semantic-release = "^7.26.0"
mudkip = "^0.4.12"
pytest-insta = "^0.1.10"
colour = "^0.1.5"

[tool.beet]
name = "PlayerDB"
id = "rx.playerdb"
data_pack.name = "PlayerDB v{{verstr}}"
description = "Player Data Manager Library - (SQL but in Minecraft)"

output = "build"
extend = ["beet-project.yaml"]

[tool.black]
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_toml = [
	"pyproject.toml:tool.poetry.version",
	"pyproject.toml:tool.beet.version"
]
major_on_zero = false
upload_to_pypi = false
build_command = "poetry run beet -c beet-release.yaml build && poetry run mudkip build --update-gh-pages --repository https://x-access-token:${GH_TOKEN}@github.com/rx-modules/playerdb"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "PlayerDB"
suppress_warnings = ["myst.header"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
